# project-boostrapper

./: CMakeLists.txt  LICENSE  README.md  devbox.json  meson.build  shell.nix  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/formatters/: cmake_root.hxx  envrc.hxx  generic.hxx  marp.hxx  nix.hxx  vcpkg.hxx
test/: CMakeLists.txt  formatter_tests.cxx
test/reference/: vcpkg.json
